crates/hir-ty/tests/snapshots/jls_types__boolean_primitive_distinctness.snap
---
source: crates/hir-ty/tests/jls_types.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m() {
        int a = true;
        boolean b = 0;
    }
}

method m(): void
  locals: l0: int | l1: boolean
  exprs: e0: boolean | e1: int
  diags: e0@4:16: incompatible-types: incompatible types: boolean cannot be converted to int | e1@5:20: incompatible-types: incompatible types: int cannot be converted to boolean
