crates/hir-ty/tests/snapshots/jls_types__null_to_primitive.snap
---
source: crates/hir-ty/tests/jls_types.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void m() {
        int n = null;
        Object ok = null;
    }
}

method m(): void
  locals: l0: int | l1: java.lang.Object
  exprs: e0: null | e1: null
  diags: e0@4:16: incompatible-types: incompatible types: null cannot be converted to int
